--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "next": "14.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "autoprefixer": "^10.4.18",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.38",
@@ -31,8 +33,7 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.5",
-    "dotenv": "^16.4.5"
+    "typescript": "^5.4.5"
   },
   "packageManager": "pnpm@8.15.5"
 }
