Add TTS system and database setup documentation
- Add complete ElevenLabs + Google TTS integration (lib/tts/)
- Add TTS configuration to .env (ELEVENLABS_API_KEY, VOICE_ID, MODEL_ID)
- Add example scripts for audio generation (scripts/generate-summary-audio.ts)
- Add database migration for summaries table with audio columns
- Add comprehensive setup guide for Claude Code (DATABASE_SETUP_FOR_CLAUDE.md)
- Add database verification scripts (check-tables.cjs, list-tables.cjs, create-summaries-table.cjs)

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.5",
+    "@supabase/supabase-js": "^2.81.1",
     "classnames": "^2.5.1",
+    "google-tts-api": "^2.0.2",
     "lucide-react": "^0.451.0",
     "next": "14.2.3",
     "next-themes": "^0.2.1",
