--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,28 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 SUPABASE_SERVICE_ROLE_KEY=
+
+# LLM providers
+OPENAI_API_KEY=__FILL_ME__
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_TEMPERATURE=0.7
+OPENAI_MAX_CONCURRENCY=4
+
+ANTHROPIC_API_KEY=__FILL_ME__
+ANTHROPIC_MODEL=claude-3-5-sonnet-20240620
+ANTHROPIC_MAX_TOKENS=4096
+ANTHROPIC_MAX_CONCURRENCY=4
+
+# Runner tuning
 AGENT_BATCH_SIZE=4
 AGENT_LOOP_DELAY_MS=1000
+
+# Text-to-Speech (ElevenLabs)
+ELEVENLABS_API_KEY=__FILL_ME__
+ELEVENLABS_VOICE_ID=EXAVITQu4vr4xnSDxMaL
+ELEVENLABS_MODEL_ID=eleven_monolingual_v1
+
+# Audio Storage
+AUDIO_BUCKET=audio-files
+AUDIO_DEST_DIR=listening
+AUDIO_OUTPUT_DIR=./out
